fixed padding and spacing throughout the site

--- a/Web/Access2Justice.Web/ClientApp/src/app/shared/navigation/upper-nav.component.css
+++ b/Web/Access2Justice.Web/ClientApp/src/app/shared/navigation/upper-nav.component.css
@@ -28,7 +28,7 @@ li a img {
 .upper-nav {
   background: #f4f4f4;
   color: #333;
-  min-height: 40px;
+  height: 52px;
 }
 
 .left-menu {
@@ -50,17 +50,15 @@ li a img {
   right: 0;
   width: auto;
   background: #f4f4f4;
+  height: 52px;
 }
 
 #language {
   margin-left: -10px;
+  height: 52px;
 }
 
 @media only screen and (min-width : 768px) {
-  .upper-nav {
-    min-height: 50px;
-  }
-
   #location {
     position: static;
     width: auto;
@@ -70,13 +68,5 @@ li a img {
 @media only screen and (min-width : 1124px) {
   li a {
     padding: 16px 15px;
-  }
-
-  .upper-nav {
-    height: 52px;
-  }
-
-  #language {
-    height: 55px;
   }
 }
